# local_store_mcp

./: .gitignore  README.md  pyproject.toml  start_server_new.py
knowledge_vault/: __init__.py  search.py  server.py  storage.py
