[project]
name = "knowledge-vault-mcp"
version = "0.1.0"
description = "Local Knowledge Management MCP Server"
authors = [{name = "Knowledge Vault Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_vault"]

[project.scripts]
knowledge-vault = "knowledge_vault.server:main"
